RESOLVED FIXED 119023
REGRESSION(r150867): FrameView auto-sizing + delegate denied image load may cause StyleResolver to re-enter itself.
https://bugs.webkit.org/show_bug.cgi?id=119023
Summary REGRESSION(r150867): FrameView auto-sizing + delegate denied image load may c...
Andreas Kling
Reported 2013-07-23 15:56:24 PDT
REGRESSION(r150867): FrameView auto-sizing + delegate denied image load may cause StyleResolver to re-enter itself.
Attachments
Proposed patch (14.95 KB, patch)
2013-07-23 16:05 PDT, Andreas Kling
no flags
Radar WebKit Bug Importer
Comment 1 2013-07-23 15:57:12 PDT
Andreas Kling
Comment 2 2013-07-23 15:58:54 PDT
Argh, actually this is <rdar://problem/14324895>
Andreas Kling
Comment 3 2013-07-23 16:05:07 PDT
Created attachment 207355 [details] Proposed patch
WebKit Commit Bot
Comment 4 2013-07-23 17:52:43 PDT
Comment on attachment 207355 [details] Proposed patch Clearing flags on attachment: 207355 Committed r153072: <http://trac.webkit.org/changeset/153072>
WebKit Commit Bot
Comment 5 2013-07-23 17:52:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.