Source/WebCore/css/StyleResolver.cpp
@@ -4198,6 +4198,10 @@ void StyleResolver::loadPendingImages()
     m_state.pendingImageProperties().clear();
 }
 
+#ifndef NDEBUG
+static bool inLoadPendingResources = false;
+#endif
+
 void StyleResolver::loadPendingResources()
 {
     // We've seen crashes in all three of the functions below. Some of them
@@ -4206,6 +4210,12 @@ void StyleResolver::loadPendingResources()
     ASSERT(style());
     if (!style())
         return;
+
+#ifndef NDEBUG
+    // Re-entering this function will probably mean trouble. Catch it in debug builds.
+    ASSERT(!inLoadPendingResources);
+    inLoadPendingResources = true;
+#endif
 
     // Start loading images referenced by this style.
     loadPendingImages();
@@ -4218,6 +4228,10 @@ void StyleResolver::loadPendingResources()
 #if ENABLE(CSS_FILTERS) && ENABLE(SVG)
     // Start loading the SVG Documents referenced by this style.
     loadPendingSVGDocuments();
+#endif
+
+#ifndef NDEBUG
+    inLoadPendingResources = false;
 #endif
 }
 
